# asaus

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h  config.status  configure  configure.ac  libtool  maindef.h
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  asaus  asaus.ui  asaus.xcf  closingdialog.cc  closingdialog.h  compilefrontend.cc  compilefrontend.h  executecode.cc  executecode.h  gui.cc  gui.h  main.cc  statusicon.cc  statusicon.h  terminal.cc  terminal.h
src/.deps/: main.Po
src/applications/: Makefile.am  Makefile.in  asaus.desktop
src/ui/: Makefile.am  closedialog.ui
