dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(asaus, 0.5)

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

AC_PROG_CXX






LT_INIT



PKG_CHECK_MODULES(ASAUS, gtkmm-3.0
vte-2.90[ ])




AC_OUTPUT([
Makefile
src/Makefile

])
